Fix .gitignore to preserve research integrity
- Remove blanket YAML/JSON exclusions that prevented tracking of:
  * Agent prompt templates (critical for reproducibility)
  * Framework configurations (research methodology)
  * Experiment configurations (research setup)
  * Infrastructure files (GitHub workflows, CI/CD)
- Replace with selective exclusions for large data files only
- Preserve results/ directories for research artifact tracking
- Maintain exclusions for temporary files and large datasets

This ensures prompt evolution, framework changes, and configuration
updates are properly version controlled for research provenance.


Former-commit-id: fdf5b14a7ff31b355d915439bb01b9391dfab25e

--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,8 @@ logs/
 reports/
 outputs/
 temp_results/
-results/
+# Note: results/ directories contain research artifacts that should be tracked
+# Only exclude temporary or large generated files
 *.eps
 *.pdf
 *.png
@@ -88,13 +89,21 @@ service_account.json
 
 # Data files (often large)
 *.csv
-*.json
-*.jsonl
-*.yaml
-*.yml
 data/
 corpus/
 datasets/
+
+# Large JSON files (research data, not configuration)
+# Note: Configuration JSON files (manifests, configs) are tracked
+# Only exclude JSON files that contain large research datasets
+**/large_dataset_*.json
+**/large_dataset_*.jsonl
+
+# Large YAML files (research data, not configuration)
+# Note: Configuration YAML files (prompts, frameworks, configs) are tracked
+# Only exclude YAML files that contain large research datasets
+**/large_dataset_*.yaml
+**/large_dataset_*.yml
 
 # Jupyter Notebook
 .ipynb_checkpoints
