Fix statistical analysis name error and cache encoding
Former-commit-id: 94d23b5b721ce942f31d33d7a1093066ae75820f

--- a/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
+++ b/discernus/agents/EnhancedAnalysisAgent/prompt.yaml
@@ -84,4 +84,4 @@ template: |
 
   ---
 
-  Begin analysis now for batch `{batch_id}`. Apply the framework to all {num_documents} documents and return your analysis as valid JSON with raw scores and evidence only. 
+  Begin analysis now for analysis `{analysis_id}`. Apply the framework to all {num_documents} documents and return your analysis as valid JSON with raw scores and evidence only. 
