--- a/discernus/core/reuse_candidates/enhanced_synthesis_prompt.yaml
+++ b/discernus/core/reuse_candidates/enhanced_synthesis_prompt.yaml
@@ -29,6 +29,9 @@ template: |
   **Experiment Configuration:**
   {experiment_content}
   
+  **Corpus Information:**
+  {corpus_manifest}
+  
   **Complete Research Data:**
   {research_data}
   
