--- a/discernus/agents/automated_statistical_analysis/prompt.yaml
+++ b/discernus/agents/automated_statistical_analysis/prompt.yaml
@@ -20,10 +20,19 @@ template: |
   **SAMPLE DATA:**
   {sample_data}
 
+  **CORPUS MANIFEST:**
+  {corpus_manifest}
+
   **YOUR TASK:**
   Generate Python functions that implement statistical analyses to answer the research questions.
 
   **CRITICAL:** Use the EXACT column names shown in the actual data structure above. Do NOT assume or invent column names.
+
+  **SPEAKER IDENTIFICATION REQUIREMENTS:**
+  - Use the corpus manifest above to identify speakers and metadata, not filename parsing
+  - The manifest can be in any format - discover its structure and extract available metadata
+  - Create speaker mappings from whatever metadata is available (speaker names, parties, styles, years, etc.)
+  - Handle missing or incomplete metadata gracefully
 
   **CRITICAL REQUIREMENTS:**
   1. Each analysis must be implemented as a separate Python function
@@ -33,6 +42,7 @@ template: |
   5. Functions must include proper docstrings with statistical methodology
   6. Functions must be production-ready with error handling
   7. Functions should follow the exact signature: def function_name(data, **kwargs):
+  8. For speaker-based analysis, use corpus manifest metadata, NOT filename parsing
 
   **WORKSPACE FILES AVAILABLE:**
   - Raw analysis data: JSON files in the current directory
@@ -70,57 +80,9 @@ template: |
           return None
   <<<DISCERNUS_FUNCTION_END>>>
 
-  **EXAMPLE:**
-  For descriptive statistics, generate:
-
-  <<<DISCERNUS_FUNCTION_START>>>
-  def calculate_descriptive_statistics(data, **kwargs):
-      """
-      Calculate descriptive statistics for all numeric dimensions.
-      
-      Args:
-          data: pandas DataFrame containing the analysis data
-          **kwargs: Additional parameters
-          
-      Returns:
-          dict: Descriptive statistics for each dimension or None if insufficient data
-      """
-      import pandas as pd
-      import numpy as np
-      import json
-      import glob
-      from pathlib import Path
-      
-      try:
-          if data is None or data.empty:
-              return None
-              
-          # Use the provided data parameter (primary data source)
-          df = data
-          
-          # Optionally read additional context from workspace files if needed
-          # This allows functions to access framework content, experiment spec, etc.
-          
-          results = {{}}
-          numeric_columns = df.select_dtypes(include=[np.number]).columns
-          
-          for col in numeric_columns:
-              if col.endswith('_score') or col.endswith('_raw') or col.endswith('_salience'):
-                  results[col] = {{
-                      'mean': float(df[col].mean()),
-                      'std': float(df[col].std()),
-                      'count': int(df[col].count()),
-                      'min': float(df[col].min()),
-                      'max': float(df[col].max())
-                  }}
-          
-          return results
-          
-      except Exception:
-          return None
-  <<<DISCERNUS_FUNCTION_END>>>
-
   Generate functions for descriptive statistics, correlation analysis, and any other statistical analyses needed for this research. Each function MUST take a 'data' parameter and can optionally read additional context from workspace files.
+
+  **REMEMBER**: Use corpus manifest metadata for speaker identification, not filename parsing.
 
 system_prompt: "You are an expert statistician generating comprehensive Python statistical analysis functions for academic research."
 
